--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,15 +81,29 @@ services:
         taskmanager.numberOfTaskSlots: 15
         parallelism.default: 3
       
-  postgres:
-    image: postgres:latest
-    container_name: postgres
+  # postgres:
+  #   image: postgres:latest
+  #   container_name: postgres
+  #   ports:
+  #     - 5432:5432
+  #   environment:
+  #     POSTGRES_USER: postgresuser
+  #     POSTGRES_PASSWORD: postgrespassword
+  #     POSTGRES_DB: postgresdb
+  #   extra_hosts:
+  #     - "host.docker.internal:127.0.0.1" # it create a DNS to connect to the host machine
+  #     - "host.docker.internal:host-gateway" 
+  timescaledb:
+    image: timescale/timescaledb-ha:pg17
+    container_name: timescaledb
+    volumes:
+      - ./timescaledbdata:/var/lib/postgresql/data
     ports:
       - 5432:5432
     environment:
-      POSTGRES_USER: postgresuser
-      POSTGRES_PASSWORD: postgrespassword
-      POSTGRES_DB: postgresdb
+      POSTGRES_USER: timescaledbuser
+      POSTGRES_PASSWORD: timescaledbpassword
+      POSTGRES_DB: timescaledb
     extra_hosts:
       - "host.docker.internal:127.0.0.1" # it create a DNS to connect to the host machine
-      - "host.docker.internal:host-gateway" 
+      - "host.docker.internal:host-gateway"
