Add python libraries into the requirements.txt, folder/ file restructuring, and add README.md

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,91 +1,8 @@
-altair==5.0.1
-annotated-types==0.5.0
-apache-beam==2.48.0
-apache-flink==1.18.1
-apache-flink-libraries==1.18.1
-attrs==24.2.0
-avro-python3==1.10.2
-backports.zoneinfo==0.2.1
-black==23.3.0
-blinker==1.6.3
-cachetools==5.5.2
-certifi==2025.4.26
-charset-normalizer==3.4.2
-click==8.1.8
-cloudpickle==2.2.1
-colorama==0.4.6
-crcmod==1.7
-decorator==5.1.1
-Deprecated==1.2.18
-dill==0.3.1.1
-dnspython==2.3.0
-docopt==0.6.2
-fastavro==1.7.4
-fasteners==0.19
-gitdb==4.0.12
-GitPython==3.1.44
-grpcio==1.62.3
-hdfs==2.7.3
-httplib2==0.22.0
-idna==3.10
-importlib-metadata==6.7.0
-importlib-resources==5.12.0
-jinja2==3.1.6
-jsonschema==4.17.3
-kafka-python==2.2.6
-markdown-it-py==2.2.0
-MarkupSafe==2.1.5
-mdurl==0.1.2
-mypy-extensions==1.0.0
-numpy==1.21.6
-objsize==0.6.1
-orjson==3.9.7
-packaging==23.2
+dash==2.15.0
+gevent==22.10.2
+kafka-python==2.2.10
 pandas==1.3.5
-pathspec==0.11.2
-Pillow==9.5.0
-pkgutil-resolve-name==1.3.10
-platformdirs==4.0.0
-proto-plus==1.26.1
-protobuf==4.24.4
+pip-chill==1.0.3
 psycopg2==2.9.9
-py4j==0.10.9.7
-pyarrow==12.0.1
 pydantic==2.5.3
-pydantic-core==2.14.6
-pydeck==0.8.1b1
-pydot==1.4.2
-pygments==2.17.2
-pymongo==4.7.3
-Pympler==1.1
-pyparsing==3.1.4
-pyrsistent==0.19.3
-python-dateutil==2.9.0.post0
-python-dotenv==0.21.1
-pytz==2025.2
-pytz-deprecation-shim==0.1.0.post0
-pywin32==308
-quixstreams==0.5.7
-regex==2024.4.16
-requests==2.31.0
-rich==13.8.1
-six==1.17.0
-smmap==5.0.2
-streamlit==1.23.1
-tenacity==8.2.3
-toml==0.10.2
-tomli==2.0.1
-toolz==0.12.1
-tornado==6.2
-typed-ast==1.5.5
-typing-extensions==4.7.1
-tzdata==2025.2
-tzlocal==4.3.1
-urllib3==2.0.7
-validators==0.20.0
-watchdog==3.0.0
 websocket-client==1.6.1
-websockets==11.0.3
-wrapt==1.16.0
-zipp==3.15.0
-zstandard==0.21.0
